# cmd/api/main.go
@@ -117,6 +117,8 @@ func main() {
 		r.Post("/exercise/translation/generate", exerciseHandler.GenerateTranslationExerciseHandler)
 		r.Post("/exercise/translation/grade", exerciseHandler.GradeTranslationExerciseHandler)
 		r.Post("/exercise/reading-comprehension/generate", exerciseHandler.GenerateReadingComprehensionExerciseHandler)
+		r.Post("/exercise/dialogue/init", exerciseHandler.GenerateDialogueInitExerciseHandler)
+		r.Post("/exercise/dialogue/continue", exerciseHandler.GenerateDialogueContinuationExerciseHandler)
 		r.Get("/lessons", userLessonsHandler.GetLessonsHandler)
 		r.Post("/lessons/generate", userLessonsHandler.GenerateLessonHandler)
 		r.Get("/grammar", userGrammarHandler.GetGrammarPatternsHandler)
