# dto/exercise/generate_dialogue_continuation_exercise.go
@@ -1,0 +1,6 @@
+package dto
+
+type GenerateDialogueContinuationExerciseRequest struct {
+	LessonId int
+	History  string
+}
