# dto/exercise/generate_dialogue_init_exercise.go
@@ -1,0 +1,5 @@
+package dto
+
+type GenerateDialogueInitExerciseRequest struct {
+	LessonId int
+}
